fix: change recommend_itinerary logic

--- a/LangGraph_reducer(1).ipynb
+++ b/LangGraph_reducer(1).ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "id": "8f6af24e",
    "metadata": {},
    "outputs": [],
@@ -203,7 +203,7 @@
     "        }\n",
     "    }\n",
     "\n",
-    "    if city not in recommend_itinerary:\n",
+    "    if city not in itineraries:\n",
     "        return \"해당 도시의 추천 일정 정보가 없습니다.\"\n",
     "    \n",
     "    # 해당 도시의 활동 목록\n",
@@ -213,22 +213,17 @@
     "    result = f\"{city}에서의 {days}일 여행 추천 일정:\\n\"\n",
     "\n",
     "    for day in range(1, days + 1):\n",
-    "        morning = activities[(day * 3 - 3) % len(activities)]\n",
-    "        afternoon = activities[(day * 3 - 2) % len(activities)]\n",
-    "        evening = activities[(day * 3 - 1) % len(activities)]\n",
-    "\n",
-    "\n",
+    "        # 각 날짜별로 활동을 cycling해서 선택\n",
+    "        day_key = ((day - 1) % len(activities)) + 1\n",
     "        result += f\"### Day {day}:\\n\"\n",
-    "        result += f\"- 아침: {morning}\\n\"\n",
-    "        result += f\"- 오후: {afternoon}\\n\"\n",
-    "        result += f\"- 저녁: {evening}\\n\"\n",
+    "        result += f\"- {activities[day_key]}\\n\"\n",
     "\n",
     "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "id": "ae431f09",
    "metadata": {},
    "outputs": [],
@@ -761,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "id": "f569987b",
    "metadata": {},
    "outputs": [],
@@ -790,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "id": "975e9622",
    "metadata": {},
    "outputs": [
@@ -804,8 +799,8 @@
       "첫째, 서울의 상위 5개 관광명소를 알려줘. 그 다음, 서울->부산 7월 15일 항공권 가격도 알려주고,마지막으로 부산 3일 일정 추천해줘.\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "Tool Calls:\n",
-      "  get_attractions (call_EcSqJf2pnxYAqikYyX5zRjVm)\n",
-      " Call ID: call_EcSqJf2pnxYAqikYyX5zRjVm\n",
+      "  get_attractions (call_gemyEvzNw7GwcxIjUGAk7abA)\n",
+      " Call ID: call_gemyEvzNw7GwcxIjUGAk7abA\n",
       "  Args:\n",
       "    city: 서울\n",
       "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
@@ -814,59 +809,60 @@
       "경복궁, N서울타워, 명동\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "Tool Calls:\n",
-      "  get_flight_price (call_uf9gLoixOL7KLbzBaweaBG2k)\n",
-      " Call ID: call_uf9gLoixOL7KLbzBaweaBG2k\n",
+      "  get_flight_price (call_0j258RWaLDHU3VoGIfKicRgZ)\n",
+      " Call ID: call_0j258RWaLDHU3VoGIfKicRgZ\n",
       "  Args:\n",
       "    departure: 서울\n",
       "    destination: 부산\n",
-      "    date: 2024-07-15\n",
+      "    date: 2023-07-15\n",
       "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
       "Name: get_flight_price\n",
       "\n",
-      "2024-07-15에 서울에서 부산까지의 항공권 가격은 50000원입니다.\n",
+      "2023-07-15에 서울에서 부산까지의 항공권 가격은 50000원입니다.\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "Tool Calls:\n",
-      "  recommend_itinerary (call_NuK7HefDyk03BfojPNL1svUa)\n",
-      " Call ID: call_NuK7HefDyk03BfojPNL1svUa\n",
+      "  recommend_itinerary (call_tRv8pJTqp1z7KWWTpSqlaKhR)\n",
+      " Call ID: call_tRv8pJTqp1z7KWWTpSqlaKhR\n",
       "  Args:\n",
       "    city: 부산\n",
       "    days: 3\n",
       "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
       "Name: recommend_itinerary\n",
       "\n",
-      "해당 도시의 추천 일정 정보가 없습니다.\n",
+      "부산에서의 3일 여행 추천 일정:\n",
+      "### Day 1:\n",
+      "- 해운대 해수욕장, 광안리 야경\n",
+      "### Day 2:\n",
+      "- 자갈치시장, 감천문화마을\n",
+      "### Day 3:\n",
+      "- 태종대, 부산타워\n",
+      "\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "\n",
       "서울의 상위 5개 관광명소는 다음과 같습니다:\n",
-      "\n",
       "1. 경복궁\n",
       "2. N서울타워\n",
       "3. 명동\n",
+      "4. 동대문 디자인 플라자\n",
+      "5. 청계천\n",
       "\n",
-      "그리고 2024년 7월 15일 서울에서 부산까지의 항공권 가격은 50,000원입니다.\n",
+      "서울에서 부산으로 가는 7월 15일 항공권 가격은 50,000원입니다.\n",
       "\n",
-      "부산에서의 3일 일정 추천 정보는 찾을 수 없었습니다. 하지만 일반적인 부산 3일 일정으로는 다음과 같은 계획을 추천드립니다:\n",
+      "부산에서의 3일 추천 일정은 다음과 같습니다:\n",
       "\n",
-      "### 1일차: 광안리 & 해운대\n",
-      "- 아침: 광안리 해수욕장 산책\n",
-      "- 점심: 근처의 해산물 식당에서 점심\n",
-      "- 오후: 해운대 해수욕장 방문 후, 동백섬 탐방\n",
-      "- 저녁: 해운대 주변의 맛집 탐방\n",
+      "### Day 1:\n",
+      "- 해운대 해수욕장\n",
+      "- 광안리 야경\n",
       "\n",
-      "### 2일차: 부산 시내 관광\n",
-      "- 아침: 자갈치 시장 방문하여 신선한 해산물 아침식사\n",
-      "- 오전: BIFF 광장, 국제시장 탐방\n",
-      "- 점심: 국제시장에서 길거리 음식 즐기기\n",
-      "- 오후: 용두산 공원에서 부산타워 전망 즐기기\n",
-      "- 저녁: 남포동에서 쇼핑과 저녁식사\n",
+      "### Day 2:\n",
+      "- 자갈치시장\n",
+      "- 감천문화마을\n",
       "\n",
-      "### 3일차: 기장 & 태종대\n",
-      "- 아침: 기장으로 이동하여 죽성리 해수욕장 탐방\n",
-      "- 점심: 기장에서의 해산물 점심\n",
-      "- 오후: 태종대 방문하여 자연 경관 감상\n",
-      "- 저녁: 부산의 마지막 저녁식사 즐기기\n",
+      "### Day 3:\n",
+      "- 태종대\n",
+      "- 부산타워\n",
       "\n",
-      "구체적으로 더 필요한 부분이 있으면 말씀해 주세요!\n"
+      "즐거운 여행 되세요! 추가 문의 사항이 있으시면 언제든지 말씀해 주세요.\n"
      ]
     }
    ],
