--- a/Crewai(1).ipynb
+++ b/Crewai(1).ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "620d2a0b",
    "metadata": {},
    "outputs": [],
@@ -97,33 +97,41 @@
     "    - 핵심 메시지\n",
     "    - SEO 키워드 목록\n",
     "    \"\"\",\n",
-    "    agent=planner\n",
+    "    agent=planner,\n",
+    "    output_file=\"content_plan.md\"\n",
     ")\n",
     "\n",
     "write = Task(\n",
     "    description=\"\"\"\n",
-    "    콘텐츠 기획 문서를 바탕으로 주제 {topic}에 관한 블로그 글을 작성합니다.\n",
+    "    콘텐츠 기획자가 제공한 다음 기획 문서를 바탕으로 주제 {topic}에 관한 블로그 글을 작성합니다:\n",
+    "    {plan}\n",
+    "    \n",
     "    각 섹션은 명확한 소제목을 포함하며,\n",
     "    서론–본문–결론 구조를 갖추도록 합니다.\n",
+    "    최소 1500자 이상의 완전한 블로그 글을 작성하세요.\n",
     "    \"\"\",\n",
     "    expected_output=\"\"\"\n",
     "    마크다운 형식의 완성된 블로그 글\n",
-    "    (각 섹션당 2~3단락 분량)\n",
+    "    (각 섹션당 2~3단락 분량, 최소 1500자)\n",
     "    \"\"\",\n",
-    "    agent=writer\n",
+    "    agent=writer,\n",
+    "    output_file=\"blog_draft.md\"\n",
     ")\n",
     "\n",
     "edit = Task(\n",
     "    description=\"\"\"\n",
-    "    작성된 블로그 글을 검토하고 편집합니다.\n",
+    "    작성된 다음 블로그 글을 검토하고 편집합니다:\n",
+    "    {write}\n",
+    "    \n",
     "    문법 오류, 어색한 표현, 논리 흐름을 개선하고\n",
     "    출판 가능한 최종 원고를 완성합니다.\n",
     "    \"\"\",\n",
     "    expected_output=\"\"\"\n",
     "    출판 준비가 완료된 최종 블로그 글 (Markdown)\n",
     "    \"\"\",\n",
-    "    agent=editor\n",
-    ")\n"
+    "    agent=editor,\n",
+    "    output_file=\"blog_final.md\"\n",
+    ")"
    ]
   },
   {
