--- a/langgraph_data/LangGraph_data(1).ipynb
+++ b/langgraph_data/LangGraph_data(1).ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "06eb8759",
    "metadata": {},
    "outputs": [
@@ -134,23 +134,83 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[단계 1/4] 데이터 탐색 시작...\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'message' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m output \u001b[38;5;129;01min\u001b[39;00m app.stream(initial_state):\n\u001b[32m      4\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m messsage \u001b[38;5;129;01min\u001b[39;00m output[\u001b[33m'\u001b[39m\u001b[33manalysis\u001b[39m\u001b[33m'\u001b[39m][\u001b[33m'\u001b[39m\u001b[33mmessages\u001b[39m\u001b[33m'\u001b[39m]:\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m         \u001b[38;5;28mprint\u001b[39m(\u001b[43mmessage\u001b[49m.content)\n",
-      "\u001b[31mNameError\u001b[39m: name 'message' is not defined"
+      "[단계 1/4] 데이터 탐색 시작...\n",
+      "데이터 파일의 구조와 주요 정보를 요약합니다.\n",
+      "데이터 파일명: train_credit_v2.csv\n",
+      "데이터 형태: (10000, 18)\n",
+      "데이터 타입: UID                   object\n",
+      "주거 형태                 object\n",
+      "현재 직장 근속 연수           object\n",
+      "대출 목적                 object\n",
+      "대출 상환 기간              object\n",
+      "연간 소득                float64\n",
+      "체납 세금 압류 횟수            int64\n",
+      "개설된 신용계좌 수             int64\n",
+      "신용 거래 연수             float64\n",
+      "최대 신용한도              float64\n",
+      "신용 문제 발생 횟수            int64\n",
+      "마지막 연체 이후 경과 개월 수      int64\n",
+      "개인 파산 횟수               int64\n",
+      "현재 대출 잔액             float64\n",
+      "현재 미상환 신용액           float64\n",
+      "월 상환 부채액             float64\n",
+      "신용 점수                  int64\n",
+      "채무 불이행 여부              int64\n",
+      "dtype: object\n",
+      "기초 통계량:               연간 소득   체납 세금 압류 횟수    개설된 신용계좌 수      신용 거래 연수       최대 신용한도  \\\n",
+      "count  1.000000e+04  10000.000000  10000.000000  10000.000000  1.000000e+04   \n",
+      "mean   2.238771e+06      0.201200     11.983500     20.105286  1.064346e+06   \n",
+      "std    1.768283e+06      0.444903      3.460264      6.793357  1.052856e+06   \n",
+      "min    2.676210e+05      0.000000      0.000000      6.000000  4.160948e+04   \n",
+      "25%    1.092836e+06      0.000000     10.000000     15.360000  4.417650e+05   \n",
+      "50%    1.735410e+06      0.000000     12.000000     20.040000  7.728525e+05   \n",
+      "75%    2.814222e+06      0.000000     14.000000     24.732500  1.313836e+06   \n",
+      "max    1.722975e+07      3.000000     27.000000     45.190000  2.117605e+07   \n",
+      "\n",
+      "        신용 문제 발생 횟수  마지막 연체 이후 경과 개월 수      개인 파산 횟수      현재 대출 잔액  \\\n",
+      "count  10000.000000       10000.000000  10000.000000  1.000000e+04   \n",
+      "mean       0.598700          44.823700      0.358000  5.685886e+05   \n",
+      "std        0.782508          25.969784      0.601724  3.748471e+05   \n",
+      "min        0.000000           0.000000      0.000000  3.973015e+04   \n",
+      "25%        0.000000          22.000000      0.000000  3.181550e+05   \n",
+      "50%        0.000000          45.000000      0.000000  4.735922e+05   \n",
+      "75%        1.000000          67.000000      1.000000  7.145184e+05   \n",
+      "max        5.000000          89.000000      4.000000  5.668815e+06   \n",
+      "\n",
+      "         현재 미상환 신용액       월 상환 부채액         신용 점수     채무 불이행 여부  \n",
+      "count  1.000000e+04   10000.000000  10000.000000  10000.000000  \n",
+      "mean   3.267841e+05   23920.242232    742.811900      0.349000  \n",
+      "std    2.629945e+05   15639.566848     52.400759      0.476678  \n",
+      "min    2.002511e+04    2001.130000    556.000000      0.000000  \n",
+      "25%    1.578979e+05   13406.192500    707.000000      0.000000  \n",
+      "50%    2.538898e+05   20114.900000    744.000000      0.000000  \n",
+      "75%    4.079062e+05   29633.480000    782.000000      1.000000  \n",
+      "max    5.224584e+06  222260.330000    830.000000      1.000000  \n",
+      "결측치 현황: UID                  0\n",
+      "주거 형태                0\n",
+      "현재 직장 근속 연수          0\n",
+      "대출 목적                0\n",
+      "대출 상환 기간             0\n",
+      "연간 소득                0\n",
+      "체납 세금 압류 횟수          0\n",
+      "개설된 신용계좌 수           0\n",
+      "신용 거래 연수             0\n",
+      "최대 신용한도              0\n",
+      "신용 문제 발생 횟수          0\n",
+      "마지막 연체 이후 경과 개월 수    0\n",
+      "개인 파산 횟수             0\n",
+      "현재 대출 잔액             0\n",
+      "현재 미상환 신용액           0\n",
+      "월 상환 부채액             0\n",
+      "신용 점수                0\n",
+      "채무 불이행 여부            0\n",
+      "dtype: int64\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "initial_state = {\"file_path\": \"train.csv\"}\n",
+    "initial_state = {\"file_path\": \"train_credit_v2.csv\"}\n",
     "\n",
     "for output in app.stream(initial_state):\n",
     "    for message in output['analysis']['messages']:\n",
