feat: 작동여부 체크

--- a/langgraph_data/LangGraph_data(2).ipynb
+++ b/langgraph_data/LangGraph_data(2).ipynb
@@ -18,18 +18,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "46002ed7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import operator\n"
+    "import operator\n",
+    "import os\n",
+    "import warnings\n",
+    "from typing import Annotated, List, TypedDict\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "df753030",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c202aba",
    "metadata": {},
    "outputs": [],
    "source": []
